# proyecto1-datamining

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: 01_eda.html  guia_proyecto.md  informe_eda.docx  informe_eda.md  informe_fase1.md  instructions.md  links.txt  primeraEntrega.md  roadmap.md
notebooks/: 01_eda.ipynb
notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb
scripts/: analisis_eda.py  run_pipeline.py
src/: cli.py  config.py  export.py  identify.py  loader.py  schemas.py
src/db/: duckdb.py  mongo.py
src/pipeline/: harmonizer.py  labels.py  scanner.py  writer.py
src/query/: api.py
