[project]
name = "ine-guatemala"
version = "0.1.0"
description = "Pipeline de datos INE Guatemala - Estadísticas Vitales"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "pyarrow>=14.0",
    "duckdb>=1.0",
    "pymongo>=4.0",
    "pyreadstat>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "typer>=0.12",
    "pydantic-settings>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "jupyterlab>=4.0",
]

[project.scripts]
ine = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
